[project]
name = "intersect-sdk"
description = "Python SDK to interact with INTERSECT"
authors = [
    {name = "Andrew Ayres", email = "ayresaf@ornl.gov"},
    {name = "Matthew Baker", email = "bakermb@ornl.gov"},
    {name = "Gregory Cage", email = "cagege@ornl.gov"},
    {name = "Lance Drane", email = "dranelt@ornl.gov"},
    {name = "John Hetrick", email = "hetrickjm@ornl.gov"},
    {name = "Seth Hitefield", email = "hitefieldsd@ornl.gov"},
    {name = "Marshall McDonnell", email = "mcdonnellmt@ornl.gov"},
    {name = "Jesse McGaha", email = "mcgahajr@ornl.gov"},
    {name = "Robert Smith", email = "smithrw@ornl.gov"},
    {name = "Gavin Wiggins", email = "wigginsg@ornl.gov"},
]
readme = "README.md"
#license = {text = "BSD-3-Clause"}
requires-python = ">=3.8.10,<4.0"
keywords = ["intersect"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.6.0,<2.7.0",
    "retrying>=1.3.4,<2.0.0",
    "paho-mqtt>=1.6.1,<2.0.0",
    "minio>=7.2.3",
]

[project.optional-dependencies]
amqp = [
    "pika>=1.3.2,<2.0.0",
]

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.3.1",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "types-paho-mqtt>=1.6.0.20240106",
]
test = [
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "httpretty>=1.1.4",
]
doc = [
    "sphinx>=5.3.0",
    "furo>=2023.3.27",
]

[tool.pdm.scripts]
test-all = "pytest tests/ --cov=src/intersect_sdk/ --cov-fail-under=80 --cov-report=html:reports/htmlcov/ --cov-report=xml:reports/coverage_report.xml --junitxml=reports/junit.xml"
test-all-debug = "pytest tests/ --cov=src/intersect_sdk/ --cov-fail-under=80 --cov-report=html:reports/htmlcov/ --cov-report=xml:reports/coverage_report.xml --junitxml=reports/junit.xml -s"
test-unit = "pytest tests/unit --cov=src/intersect_sdk/"
lint = {composite = ["lint-format", "lint ruff", "lint-mypy"]}
lint-format = "ruff format"
lint-ruff = "ruff check --fix"
lint-mypy = "mypy src/intersect_sdk/"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "file"
path = "src/intersect_sdk/version.py"

[tool.ruff]
line-length = 100
isort = { known-first-party = ['src'] }
pydocstyle = { convention = 'google'}
format = {quote-style = 'single'}
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 20 }
pylint = { max-args = 10, max-branches = 20, max-returns = 10 }
# pyflakes and the relevant pycodestyle rules are already configured
extend-select = [
    'C90', # mccabe complexity
    'I', # isort
    'N', # pep8-naming
    'D', # pydocstyle
    'UP', # pyupgrade
    'YTT', # flake8-2020
    'ANN', # flake8-annotations
    'ASYNC', # flake8-async
    'S', # flake8-bandit
    'BLE', # flake8-blind-except
    'B', # flake8-bugbear
    'A', # flake8-builtins
    'COM', # flake8-commas
    'C4', # flake8-comprehensions
    'DTZ', # flake8-datetimez
    'T10', # flake8-debugger
    'EM', # flake8-error-message
    'FA', # flake8-future-annotations
    'ISC', # flake8-implicit-string-concat
    'ICN', # flake8-import-conventions
    'G', # flake8-logging-format
    'INP', # flake8-no-pep420
    'PIE', # flake8-PIE
    'T20', # flake8-T20
    'PYI', # flake8-pyi
    'PT', # flake8-pytest-style
    'Q', # flake8-quotes
    'RSE', # flake8-raise
    'RET', # flake8-return
    'SLF', # flake8-self
    'SLOT', # flake8-slots
    'SIM', # flake8-simplify
    'TCH', # flake8-type-checking
    'ARG', # flake8-unused-arguments
    'PTH', # flake8-use-pathlib
    'PGH', # pygrep-hooks
    'PL', # pylint
    'TRY', # tryceratops
    'FLY', # flynt
    'RUF', # RUFF additional rules
]
# If you're seeking to disable a rule, first consider whether the rule is overbearing, or if it should only be turned off for your usecase.
ignore = [
    'COM812', # formatter, handled by Ruff format
    'ISC001', # formatter, handled by Ruff format
    'SIM105', # "with contextlib.suppress():" is slower than try-except-pass
    'ANN101', # don't need to annotate "self" typing
    'ANN102', # don't need to annotate "cls" typing for class methods
    'ANN401', # allow explicit "Any" typing, use with care
    'PLR2004', # allow "magic numbers"
]

[tool.ruff.extend-per-file-ignores]
'__init__.py' = ['F401'] # __init__.py commonly has unused imports
'docs/*' = [
    'D', # the documentation folder does not need documentation
    'INP001', # docs are not a namespace package
]
'examples/*' = [
    'N999', # module names for examples are not standard
    'T20', # allow print/pprint statements in examples
    'S106', # don't care about credentials in examples
    'D100', # documenting modules in examples is unhelpful
    'D104', # documenting packages in examples is unhelpful
    'TRY002', # examples can raise their own exception
    'FA100', # examples are tested on Python 3.8, and future annotations cause problems with Pydantic
]
'tests/*' = [
    'S101', # allow assert statements in tests
    'S106', # don't care about credentials in tests
    'SLF001', # allow private member access in tests
    'ANN201', # don't need to annotate return types in tests
    'ARG', # allow unused parameters in tests
    'D', # ignore documentation in tests
    'FA100', # tests frequently use runtime typing annotations
]

# see https://mypy.readthedocs.io/en/stable/config_file.html for a complete reference
[tool.mypy]
strict = true
ignore_missing_imports = true # don't require typing for library stubs if they don't exist
disallow_untyped_decorators = false # this is needed for library decorator compatibility, i.e. "retrying"

[tool.pytest.ini_options]
log_cli = true
addopts = "-ra"

[tool.coverage.report]
omit = [
    '*__init__*', # __init__ files should just re-export other classes and functions
]
exclude_lines = [
    'pragma: no-cover', # standard
    'if (typing\\.)?TYPE_CHECKING:', # type checking blocks are not executed in coverage, but we don't care
    '@(abc\\.)?abstractmethod', # don't try to cover abstract methods
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
